added css,fixed timer negative problems,draffed scores page

--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
-#quiz{
+#question{
  background-color: lightblue;
+}
+
+#options{
+background-color: lightgoldenrodyellow;
+}
+
+#initialForm{
+  text-align: center;
 }
